// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColumnChooserBody > should render the columns rows and the column select all 1`] = `
<div
  class="_body_5ee47b tc-tooltip-body"
  id="column-chooser-body"
>
  <div
    class="_content_5ee47b tc-tooltip-content"
    id="column-chooser-body-content"
  >
    <div
      class="tc-column-chooser-body _tc-column-chooser-body_27b2cf"
    >
      <div
        class="tc-column-chooser-row _tc-column-chooser-row_27b2cf tc-column-chooser-row-select-all _tc-column-chooser-row-select-all_27b2cf _tc-column-chooser-row-select-all _tc-column-chooser-row-select-all_27b2cf_27b2cf"
      >
        <div
          class="_checkbox_c9d9f8"
        >
          <input
            aria-checked="true"
            aria-describedby="body-context-id-body-hide all the columns"
            checked=""
            data-feature="column-chooser.select.all"
            id="body-context-id-body-checkbox-Unselect-all"
            type="checkbox"
          />
          <label
            class="_label_048b2f _label_inline_048b2f"
            for="body-context-id-body-checkbox-Unselect-all"
          >
            Unselect all
          </label>
        </div>
        <div
          class="sr-only"
          id="body-context-id-body-hide all the columns"
        >
          hide all the columns
        </div>
      </div>
      <div
        class="tc-column-chooser-columns-list _tc-column-chooser-columns-list_27b2cf"
      >
        <div
          class="tc-column-chooser-row _tc-column-chooser-row_27b2cf"
        >
          <svg
            aria-hidden="true"
            pointer-events="none"
            shape-rendering="geometricPrecision"
            style="width: 1rem; height: 1rem;"
          >
            <use
              xlink:href="#locker-closed:M"
            />
          </svg>
          <span
            class="tc-column-chooser-row-label _tc-column-chooser-row-label_27b2cf"
          >
            col1
          </span>
        </div>
        <div
          class="tc-column-chooser-row _tc-column-chooser-row_27b2cf"
        >
          <svg
            aria-hidden="true"
            pointer-events="none"
            shape-rendering="geometricPrecision"
            style="width: 1rem; height: 1rem;"
          >
            <use
              xlink:href="#locker-closed:M"
            />
          </svg>
          <span
            class="tc-column-chooser-row-label _tc-column-chooser-row-label_27b2cf"
          >
            col2
          </span>
        </div>
        <div
          class="tc-column-chooser-row _tc-column-chooser-row_27b2cf"
        >
          <div
            class="_checkbox_c9d9f8"
          >
            <input
              aria-checked="true"
              aria-describedby="body-context-id-body-display the column col3"
              checked=""
              data-feature="column-chooser.select"
              id="body-context-id-body-checkbox-col3"
              type="checkbox"
            />
            <label
              class="_label_048b2f _label_inline_048b2f"
              for="body-context-id-body-checkbox-col3"
            >
              col3
            </label>
          </div>
          <div
            class="sr-only"
            id="body-context-id-body-display the column col3"
          >
            display the column col3
          </div>
        </div>
        <div
          class="tc-column-chooser-row _tc-column-chooser-row_27b2cf"
        >
          <div
            class="_checkbox_c9d9f8"
          >
            <input
              aria-checked="false"
              aria-describedby="body-context-id-body-display the column col4"
              data-feature="column-chooser.select"
              id="body-context-id-body-checkbox-col4"
              type="checkbox"
            />
            <label
              class="_label_048b2f _label_inline_048b2f"
              for="body-context-id-body-checkbox-col4"
            >
              col4
            </label>
          </div>
          <div
            class="sr-only"
            id="body-context-id-body-display the column col4"
          >
            display the column col4
          </div>
        </div>
        <div
          class="tc-column-chooser-row _tc-column-chooser-row_27b2cf"
        >
          <div
            class="_checkbox_c9d9f8"
          >
            <input
              aria-checked="true"
              aria-describedby="body-context-id-body-display the column col5"
              checked=""
              data-feature="column-chooser.select"
              id="body-context-id-body-checkbox-col5"
              type="checkbox"
            />
            <label
              class="_label_048b2f _label_inline_048b2f"
              for="body-context-id-body-checkbox-col5"
            >
              col5
            </label>
          </div>
          <div
            class="sr-only"
            id="body-context-id-body-display the column col5"
          >
            display the column col5
          </div>
        </div>
        <div
          class="tc-column-chooser-row _tc-column-chooser-row_27b2cf"
        >
          <div
            class="_checkbox_c9d9f8"
          >
            <input
              aria-checked="false"
              aria-describedby="body-context-id-body-display the column col6"
              data-feature="column-chooser.select"
              id="body-context-id-body-checkbox-col6"
              type="checkbox"
            />
            <label
              class="_label_048b2f _label_inline_048b2f"
              for="body-context-id-body-checkbox-col6"
            >
              col6
            </label>
          </div>
          <div
            class="sr-only"
            id="body-context-id-body-display the column col6"
          >
            display the column col6
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColumnChooserBody should render the columns rows and the column select all 1`] = `
<div
  class="theme-body tc-tooltip-body"
  id="column-chooser-body"
>
  <div
    class="theme-content tc-tooltip-content"
    id="column-chooser-body-content"
  >
    <div
      class="tc-column-chooser-body theme-tc-column-chooser-body"
    >
      <div
        class="tc-column-chooser-row theme-tc-column-chooser-row tc-column-chooser-row-select-all theme-tc-column-chooser-row-select-all theme-tc-column-chooser-row-select-all theme-tc-column-chooser-row-select-all"
      >
        <div
          class="theme-checkbox"
        >
          <input
            aria-checked="true"
            aria-describedby="body-context-id-body-hide all the columns"
            checked=""
            data-feature="column-chooser.select.all"
            id="body-context-id-body-checkbox-Unselect-all"
            type="checkbox"
          />
          <label
            class="theme-label theme-label_inline"
            for="body-context-id-body-checkbox-Unselect-all"
          >
            Unselect all
          </label>
        </div>
        <div
          class="sr-only"
          id="body-context-id-body-hide all the columns"
        >
          hide all the columns
        </div>
      </div>
      <div
        class="tc-column-chooser-columns-list theme-tc-column-chooser-columns-list"
      >
        <div
          class="tc-column-chooser-row theme-tc-column-chooser-row"
        >
          <svg
            aria-hidden="true"
            pointer-events="none"
            shape-rendering="geometricPrecision"
            style="width: 1rem; height: 1rem;"
          >
            <use
              xlink:href="#locker-closed:M"
            />
          </svg>
          <span
            class="tc-column-chooser-row-label theme-tc-column-chooser-row-label"
          >
            col1
          </span>
        </div>
        <div
          class="tc-column-chooser-row theme-tc-column-chooser-row"
        >
          <svg
            aria-hidden="true"
            pointer-events="none"
            shape-rendering="geometricPrecision"
            style="width: 1rem; height: 1rem;"
          >
            <use
              xlink:href="#locker-closed:M"
            />
          </svg>
          <span
            class="tc-column-chooser-row-label theme-tc-column-chooser-row-label"
          >
            col2
          </span>
        </div>
        <div
          class="tc-column-chooser-row theme-tc-column-chooser-row"
        >
          <div
            class="theme-checkbox"
          >
            <input
              aria-checked="true"
              aria-describedby="body-context-id-body-display the column col3"
              checked=""
              data-feature="column-chooser.select"
              id="body-context-id-body-checkbox-col3"
              type="checkbox"
            />
            <label
              class="theme-label theme-label_inline"
              for="body-context-id-body-checkbox-col3"
            >
              col3
            </label>
          </div>
          <div
            class="sr-only"
            id="body-context-id-body-display the column col3"
          >
            display the column col3
          </div>
        </div>
        <div
          class="tc-column-chooser-row theme-tc-column-chooser-row"
        >
          <div
            class="theme-checkbox"
          >
            <input
              aria-checked="false"
              aria-describedby="body-context-id-body-display the column col4"
              data-feature="column-chooser.select"
              id="body-context-id-body-checkbox-col4"
              type="checkbox"
            />
            <label
              class="theme-label theme-label_inline"
              for="body-context-id-body-checkbox-col4"
            >
              col4
            </label>
          </div>
          <div
            class="sr-only"
            id="body-context-id-body-display the column col4"
          >
            display the column col4
          </div>
        </div>
        <div
          class="tc-column-chooser-row theme-tc-column-chooser-row"
        >
          <div
            class="theme-checkbox"
          >
            <input
              aria-checked="true"
              aria-describedby="body-context-id-body-display the column col5"
              checked=""
              data-feature="column-chooser.select"
              id="body-context-id-body-checkbox-col5"
              type="checkbox"
            />
            <label
              class="theme-label theme-label_inline"
              for="body-context-id-body-checkbox-col5"
            >
              col5
            </label>
          </div>
          <div
            class="sr-only"
            id="body-context-id-body-display the column col5"
          >
            display the column col5
          </div>
        </div>
        <div
          class="tc-column-chooser-row theme-tc-column-chooser-row"
        >
          <div
            class="theme-checkbox"
          >
            <input
              aria-checked="false"
              aria-describedby="body-context-id-body-display the column col6"
              data-feature="column-chooser.select"
              id="body-context-id-body-checkbox-col6"
              type="checkbox"
            />
            <label
              class="theme-label theme-label_inline"
              for="body-context-id-body-checkbox-col6"
            >
              col6
            </label>
          </div>
          <div
            class="sr-only"
            id="body-context-id-body-display the column col6"
          >
            display the column col6
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
